# wheel_legged_rl

./: .gitignore  README.md
assets/robots/pongbot_w/urdf/: PONGBOT_W.gv  (+4 more)
scripts/: list_envs.py  random_agent.py  zero_agent.py
scripts/debug/: inspect_ckpt_input_dim.py  inspect_env_contract.py  list_pongbotw_tasks.py
scripts/mujoco/: build_pongbot_w_mujoco_xml.py  inspect_pongbot_w_urdf_candidates.py  make_pongbot_w_floating_urdf.py  pongbot_w_keyboard_teleop.py  pongbot_w_mujoco_contract.py
scripts/rsl_rl/: cli_args.py  play.py  train.py
scripts/tools/: check_isaaclab_api_with_app.py  inspect_robot_data_fields.py  inspect_usd_physics.py  log_trot_contact_debug.py  make_pongbot_collision_v0_usd.py  make_pongbot_collision_v2_refined_contact_usd.py  make_pongbot_collision_v3_manual_contact_usd.py  make_pongbot_collision_v4_manual_contact_usd.py  measure_nominal_wheel_positions.py
sim2sim/: README.md
sim2sim/common/: __init__.py  math_utils.py  model_resolver.py  pongbot_contract.py
sim2sim/cpp/: CMakeLists.txt
sim2sim/cpp/include/: mujoco_pongbot.hpp  onnx_policy.hpp  pongbot_contract.hpp
sim2sim/cpp/src/: main.cpp  mujoco_pongbot.cpp  onnx_policy.cpp
sim2sim/export/: export_rsl_rl_policy_onnx.py  inspect_rsl_rl_runner.py
sim2sim/python/: build_freebase_mjcf.py  check_dependencies.py  inspect_mujoco_model.py  inspect_onnx_policy.py  mujoco_keyboard_teleop.py  mujoco_onnx_policy_play.py
source/pongbot_w/: setup.py
source/pongbot_w/config/: extension.toml
source/pongbot_w/docs/: CHANGELOG.rst
source/pongbot_w/pongbot_w/: ui_extension_example.py
(+14 files in other folders)
